opam-version: "2.0"
name: "vector3"
synopsis: "Module for 3D vectors (implemented as records of x, y and z floats)"
maintainer: "unixjunkie@sdf.org"
authors: "Francois Berenger"
homepage: "https://github.com/UnixJunkie/vector3"
bug-reports: "https://github.com/UnixJunkie/vector3/issues"
depends: [
  "ocaml"
  "dune" {>= "2.9"}
]
build: ["dune" "build" "-p" name "-j" jobs]
dev-repo: "git+https://github.com/HappyCrow/vector3"
# url {
#   src: "https://github.com/HappyCrow/vector3/archive/vXXX.tar.gz"
#   checksum: "md5=YYY"
# }
